@@ -1,5 +1,7 @@
 2001-09-05  Tim Jenness  <timj@jach.hawaii.edu>
 
+	* Calib/Michelle.pm (_set_index_rules): Forgot about ORAC_DATA_CAL
+
 	* Inst/Defn.pm (orac_determine_primitive_search_path): Add IFU to UIST
 
 2001-08-13  Tim Jenness  <timj@jach.hawaii.edu>
